--- a/css/styles.css
+++ b/css/styles.css
@@ -232,3 +232,16 @@ section.your-active-class .landing__container::after {
     transform: rotate(360deg) translate(-1em) rotate(-360deg);
   }
 }
+
+#scrollToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  background-color: red;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+}
